# conv_editor

./: .gitignore  pyproject.toml
src/conv_editor/: __main__.py  app.py
src/conv_editor/config/: logging_config.py  settings.py
src/conv_editor/core/: conversation.py  formatter.py  models.py
src/conv_editor/core/commands/: base_command.py  content_commands.py  item_commands.py  undo_manager.py
src/conv_editor/export/: config.py  exporter.py  hdf5_writer.py
src/conv_editor/services/: file_service.py  h5_reader_service.py  openai_service.py  search_service.py
src/conv_editor/ui/: main_window.py
src/conv_editor/ui/dialogs/: base_dialog.py  export_dialog.py  generation_dialogs.py  h5_inspector_dialog.py  search_dialog.py  settings_dialog.py  word_cloud_dialog.py
src/conv_editor/ui/widgets/: __init__.py  base_content_widget.py  drop_indicator.py  empty_state_widget.py  insertion_widget.py  item_widget.py  maskable_text_edit.py  search_result_widget.py  text_content_widgets.py  tool_content_widgets.py
src/conv_editor/workers/: chat_worker.py  completion_worker.py  export_worker.py  search_worker.py  word_cloud_worker.py
